2003-06-29  Nick Drochak <ndrochak@gol.com>

	* FileIOPermissionAttributeTest.cs: Don't use windows path name.

2003-06-28  Sebastien Pouliot  <spouliot@videotron.ca>

	* EnvironmentPermissionAttributeTest.cs: New.
	* EnvironmentPermissionTest.cs: New.
	* FileDialogPermissionAttributeTest.cs: New.
	* FileDialogPermissionTest.cs: New.
	* FileIOPermissionAttributeTest.cs: New.
	* PublisherIdentityPermissionAttributeTest.cs: New.
	* PublisherIdentityPermissionTest.cs: New.

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002-12-16  Sebastien Pouliot  <spouliot@videotron.ca>

	AllTests.cs: Added StrongNamePublicKeyBlobTest suite.
	StrongNamePublicKeyBlobTest.cs: New. Test suite for
	StrongNamePublicKeyBlob.

2002-06-18  Nick Drochak  <ndrochak@gol.com>

	* FileIOPermissionTest.cs: Use Unix paths if it looks like we are not
	running the tests on Windows. Need to expand this when we run the
	tests on Mac OS's (and others I suppose).  Also consolidated some
	redundant code.

2002-02-09  Nick Drochak  <ndrochak@gol.com>

	* FileIOPermissionTest.cs: Remove intersect test where it was trying
	to intersect a permission with itself.  This throws an exception
	with mscorlib.

2002-01-14  Nick Drochak  <ndrochak@gol.com>

	* FileIOPermissionTest.cs: New File.
	* AllTests.cs: New File.
